Changes to index, update Readme, add License

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 	
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item">
-					<a class="nav-link" href="https://tenor.com/search/troll-face-dance-gifs" target="_blank" onclick="return confirm('GITHUB strony będzie zrobiony potem :->.');">
+					<a class="nav-link" href="https://github.com/Xonn1com/Henryczkowo-mc" target="_blank">
 						<i class="fab fa-github"></i>
 						GitHub
 					</a>
