--- a/index.html
+++ b/index.html
@@ -3,21 +3,25 @@
 <head>
 	<title>Henryczkowo MC</title>
 	<link rel="icon" type="image/x-icon" href="./static/server-icon.ico">
-	<meta name="viewport" content="width=1280, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <!-- Custom CSS -->
+	<meta http-equiv="Content-Language" content="pl">
+    <meta charset="UTF-8">
+
+	<!-- Custom CSS -->
     <link rel="stylesheet" href="css/main.css">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
-          integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+	<!-- Font Awesome -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
+	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+	<!-- MDB -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.2.0/mdb.min.css" rel="stylesheet"/>
 
+	<!-- MDB -->
+	<script	type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.2.0/mdb.min.js"></script>
 
 </head>
 <body class="body">
-	<script src="js/jquery-3.6.0.min.js"></script>
 	<script src="js/main.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
@@ -68,61 +72,92 @@
 		});
 	</script>
 
-	<nav class="navbar navbar-expand-md navbar-light background fixed-top">
-		<a class="navbar-brand" href="#" onclick="smoothScroll('jumbo')">
-			<img src="static/icon.png" alt="Henryk Logo" class="navbar-icon-style">
-		</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
+	<!-- Navbar -->
+	<nav class="navbar navbar-expand-lg bg-light navbar-light sticky-top">
+		<!-- Container wrapper -->
+		<div class="container-fluid">
+	
+		<!-- Navbar brand -->
+		<a class="navbar-brand" href="#"><img src="../server-icon.png" alt="Henryk logo" style="width: 35px; height: 35px;"></a>
+	
+		<!-- Toggle button -->
+		<button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<i class="fas fa-bars"></i>
 		</button>
 	
-		<div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="navbar-nav">
-				<li class="nav-item active">
-					<a class="nav-link" href="#" onclick="smoothScroll('jumbo')"><i class="fa fa-home"
-																					aria-hidden="true"></i>
-						Główna</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#about" onclick="smoothScroll('about')"><i class="fa fa-info-circle"
-																						 aria-hidden="true"></i>
-						O serwerze</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#cechy" onclick="smoothScroll('features')"><i class="fas fa-list-alt"
-																							   aria-hidden="true"></i>
-						Cechy</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#status" onclick="smoothScroll('cheats-detected')"><i
-							class="fa fa-address-book" aria-hidden="true"></i>
-						Status</a>
-				</li>
+		<!-- Collapsible wrapper -->
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+	
+			<!-- Link -->
+			<li class="nav-item">
+				<a class="nav-link" href="#" style="color: rgba(0,0,0,.9); font-family: Segoe UI;"><i class="fa fa-home"></i> Główna</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#about" style="color: rgba(0,0,0,.9); font-family: Segoe UI;"><i class="fa fa-info-circle"></i> O serwerze</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#cechy" style="color: rgba(0,0,0,.9); font-family: Segoe UI;"><i class="fas fa-list-alt"></i> Cechy</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#status" style="color: rgba(0,0,0,.9); font-family: Segoe UI;"><i class="fa fa-address-book"></i> Status</a>
+			</li>
+	
 			</ul>
 	
-			<ul class="navbar-nav ml-auto">
-				<li class="nav-item">
-					<a class="nav-link" href="https://github.com/Xonn1com/Henryczkowo-mc" target="_blank">
-						<i class="fab fa-github"></i>
-						GitHub
-					</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="https://tenor.com/search/troll-face-dance-gifs" target="_blank" onclick="return confirm('Serwer discord będzie zrobiony potem :->.');"><i class="fab fa-discord"></i>
-						Discord
-					</a>
-				</li>
+			<!-- Icons -->
+			<ul class="navbar-nav d-flex flex-row me-1">
+			<li class="nav-item me-3 me-lg-0">
+				<a class="nav-link" href="https://github.com/Xonn1com/Henryczkowo-mc" target="_blank" style="color: rgba(0,0,0,.9); font-family: Segoe UI;"><i class="fab fa-github"></i> GitHub</a>
+			</li>
+			<li class="nav-item me-3 me-lg-0">
+				<a class="nav-link" href="https://tenor.com/search/troll-face-dance-gifs" target="_blank" onclick="return confirm('Serwer discord będzie zrobiony potem :->.');" style="color: rgba(0,0,0,.9); font-family: Segoe UI;"><i class="fab fa-discord"></i> Discord</a>
+			</li>
 			</ul>
+	
 		</div>
+		</div>
+		<!-- Container wrapper -->
 	</nav>
+	<!-- Navbar -->
+
+	<!-- Modal -->
+	<div
+		class="modal fade"
+		id="staticBackdrop"
+		data-mdb-keyboard="false"
+		tabindex="-1"
+		aria-labelledby="staticBackdropLabel"
+		aria-hidden="true">
+
+		<div class="modal-dialog modal-dialog-centered">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title">graj.pierwsza-test.ga</h5>
+					<button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+				</div>
+			<div class="modal-body text-center" style="color: rgba(0,0,0,.9); font-family: Segoe UI;">Mamy nadzieję, że wkrótce zobaczymy się online!
+				
+			</div>
+			<div class="modal-footer justify-content-center">
+				<button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Oczywiście!</button>
+			</div>
+		</div>
+		</div>
+	</div>
+
+	<!-- Back to top button -->
+	<button	type="button" onclick="window.location.href='#'" class="btn btn-danger btn-floating btn-lg " style="position: fixed; bottom: 20px; right: 20px; display: block;">
+	  <i class="fas fa-arrow-up"></i>
+	</button>
+
 	<header id="jumbo">
 		<div class="jumbotron site-section info-jumbotron" style="padding-top: 150px; padding-bottom: 100px">
 			<h1 class="display-4">Henryczkowo</h1>
 			<p class="lead">Henryczkowo-MC to najpopularniejszy serwer bez zasad etycznych</p>
 			<p class="lead">
 				<a class="btn btn-primary btn-lg btn-custom btn-custom-hover" href="#status"
-				   role="button"> <i
+				   role="button" data-mdb-toggle="modal" data-mdb-target="#staticBackdrop"> <i
 						class="fas fa-crown"></i>  Zobacz IP</a>
 			</p>
 		</div>
@@ -130,12 +165,12 @@
 	<header id="about">
 		<div class="container site-section about">
 			<div class="row justify-content-center">
-				<div class="col col-xs-8 col-sm-1 col-md-3 text-center">
+				<div class="col col-xs-8 col-sm-1 col-md-3 text-center" style="color: rgba(0,0,0,.9); font-family: Segoe UI;">
 					<h2>O serwerze</h2>
 					<hr>
 				</div>
 			</div>
-			<div class="about-summary">
+			<div class="about-summary" style="color: rgba(0,0,0,.9); font-family: Segoe UI;">
 				<h4>Co to "Henryczkowo-MC"?</h4>
 				Henryczkowo-MC powstało z myślą o wolności słowa. W grze na serwerze, możesz pisać co chcesz! Na przykład "Uważam, że ... to gorsza rasa" nie poskutkuje banem za obrażanie.
 				<p></p>
@@ -153,17 +188,20 @@
 		<div class="container site-section about">
 			<div class="about-features">
 				<div class="row justify-content-center">
-					<div class="col col-xs-8 col-sm-1 col-md-3 text-center">
+					<div class="col col-xs-8 col-sm-1 col-md-3 text-center" style="color: rgba(0,0,0,.9); font-family: Segoe UI;">
 						<h2>Cechy</h2>
 						<hr>
 					</div>
 				</div>
-				<div class="about-features">
+				<div class="about-features" style="color: rgba(0,0,0,.9); font-family: Segoe UI;">
 					<h4>Wolność słowa</h4>
 					Kilka razy wspomniana wolność słowa to jest motto serwera, dlatego tak bardzo naciskamy na to. Czat w grze nie będzie sprawdzany.
 					<p></p>
 					<h4>Mapa serwera</h4>
 					Fajne urozmaicenie serwera - Mapa świata. Dostępny overworld, nether i end.
+					<p></p>
+					<h4>Fajne statystyki</h4>
+					Możesz zobaczyć <a href="###statystyki"> swoje statystyki na naszej stronie</a>!
 					<p></p>
 					<h4>Publiczny kod źródłowy do tej strony</h4>
 					Nie każdy serwer postanawia udostępniać swój kod do strony na Githubie. Udostępniając ten kod, pokazujemy, że ufamy wam; naszym graczom
@@ -172,7 +210,7 @@
 					Brzmi to troche jak robienie sobie loda, aleeeeee
 					<p></p>
 					Administracja będzie miała wywalone na graczy, chyba, że dostaniemy reporta [/helpop] od gracza(konfidenta), albo reporta od anticheata.
-					<p></p>
+					<p></p>					
 				</div>
 			</div>
 		</div>
@@ -180,7 +218,7 @@
 	<header id="status">
 		<div class="container site-section" style="padding-bottom: 100px">
 			<div class="row justify-content-center">
-				<div class="col col-xs-8 col-sm-4 col-md-3 text-center">
+				<div class="col col-xs-8 col-sm-4 col-md-3 text-center" style="color: rgba(0,0,0,.9); font-family: Segoe UI;">
 					<h2>Status serwera</h2>
 					<hr>
 				</div>
@@ -198,7 +236,7 @@
 			</div>
 			<div class="box">
 				<table class="table is-fullwidth is-hoverable">
-					<tbody>
+					<tbody style="color: rgba(0,0,0,.9); font-family: Segoe UI;">
 						<tr>
 							<th>Nasze IP</th>
 							<td id="hostname"></td>
@@ -228,9 +266,5 @@
 			</div>
 		</div>
 	</footer>
-	<a id="back-to-the-top" href="#" class="btn btn-primary btn-lg back-to-the-top btn-custom-hover" role="button"
-   title="Return to the top"
-   data-toggle="tooltip" data-placement="left"><i class="fas fa-arrow-up"></i> </a>
-
 </body>
 </html>
