Update project to use MinecraftStats

--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
 			<li class="nav-item">
 				<a class="nav-link" href="#status" style="color: rgba(0,0,0,.9); font-family: Segoe UI;"><i class="fa fa-address-book"></i> Status</a>
 			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="https://pierwsza-test.ga/MinecraftStats/" style="color: rgba(0,0,0,.9); font-family: Segoe UI;"><i class="fa-solid fa-address-card"></i> Statystyki</a>
+			</li>
 	
 			</ul>
 	
@@ -201,7 +204,7 @@
 					Fajne urozmaicenie serwera - Mapa świata. Dostępny overworld, nether i end.
 					<p></p>
 					<h4>Fajne statystyki</h4>
-					Możesz zobaczyć <a href="###statystyki"> swoje statystyki na naszej stronie</a>!
+					Możesz zobaczyć <a href="https://pierwsza-test.ga/MinecraftStats/"> swoje statystyki na naszej stronie</a>!
 					<p></p>
 					<h4>Publiczny kod źródłowy do tej strony</h4>
 					Nie każdy serwer postanawia udostępniać swój kod do strony na Githubie. Udostępniając ten kod, pokazujemy, że ufamy wam; naszym graczom
