--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		<div class="container-fluid">
 	
 		<!-- Navbar brand -->
-		<a class="navbar-brand" href="#"><img src="../server-icon.png" alt="Henryk logo" style="width: 35px; height: 35px;"></a>
+		<a class="navbar-brand" href="#"><img src="static/icon.png" alt="Henryk logo" style="width: 35px; height: 35px;"></a>
 	
 		<!-- Toggle button -->
 		<button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
