--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
 			<li class="nav-item">
 				<a class="nav-link" href="https://pierwsza-test.ga/MinecraftStats/" style="color: rgba(0,0,0,.9); font-family: Segoe UI;"><i class="fa-solid fa-address-card"></i> Statystyki</a>
 			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="https://mapa.pierwsza-test.ga" style="color: rgba(0,0,0,.9); font-family: Segoe UI;"><i class="fa-solid fa-map-location-dot"></i> Mapa</a>
+			</li>
 	
 			</ul>
 	
@@ -201,7 +204,7 @@
 					Kilka razy wspomniana wolność słowa to jest motto serwera, dlatego tak bardzo naciskamy na to. Czat w grze nie będzie sprawdzany.
 					<p></p>
 					<h4>Mapa serwera</h4>
-					Fajne urozmaicenie serwera - Mapa świata. Dostępny overworld, nether i end.
+					Fajne urozmaicenie serwera - <a href="https://mapa.pierwsza-test.ga">Mapa świata.</a> Dostępny overworld, nether i end.
 					<p></p>
 					<h4>Fajne statystyki</h4>
 					Możesz zobaczyć <a href="https://pierwsza-test.ga/MinecraftStats/"> swoje statystyki na naszej stronie</a>!
